beginnings of a prototype

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
     <title>pywh</title>
-    <h1>hi guys welcome to my first youtoob video</h1>
 </head>
 <body>
+    <h1>word hunt prototype??</h1>
+    <div align="left">
+        <canvas width="800" height="800" id="gameCanvas"></canvas>
+    </div>
+    
+    <script src="game/prototype.js"></script>
 </body>
 </html>
