board display done(?)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <canvas width="800" height="800" id="gameCanvas"></canvas>
     </div>
     
-    <script src="game/prototype.js"></script>
+    <script src="game/prototype.js" type="module"></script>
 </body>
 </html>
