--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>pywh</title>
 </head>
-<body>
-    <h1>word hunt prototype??</h1>
-    <div align="left">
-        <canvas width="400" height="400" id="gameCanvas"></canvas>
-    </div>
-    
-    <script src="game/prototype.js" type="module"></script>
-</body>
+    <body>
+        <h1>word hunt prototype??</h1>
+        <div align="left">
+            <canvas width="400" height="400" id="gameCanvas"></canvas>
+        </div>
+        <script src="game/dictionaryloader.js" type="module"></script>
+        <script src="game/prototype.js" type="module"></script>
+    </body>
 </html>
