--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
     <body>
         <h1>word hunt prototype??</h1>
+        <h2 id="score">Score: 0<h2>
         <div align="left">
             <canvas width="400" height="400" id="gameCanvas"></canvas>
         </div>
