--- a/quickplay.html
+++ b/quickplay.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Play - Wordhunt.io</title>
+</head>
 <body>
     <a href="index.html" class="back-button">← Back to Menu</a>
     
@@ -14,5 +15,5 @@
         <div id="score">Points: 0 Words: 0</div>
     </div>
     
-    <script src="game/prototype.js" type="module"></script>
+    <script src="game/prototype.js"></script>
 </body>
