basic server beginnings

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>pywh</title>
+    <script src="webscripts/gameapi.js" defer></script>
 </head>
     <body>
         <h1>word hunt prototype??</h1>
@@ -9,6 +10,7 @@
         <div align="left">
             <canvas width="400" height="400" id="gameCanvas"></canvas>
         </div>
+        <button onclick="enterMatchmaking()">matchmaking button (totally works trust)</button>
         <script src="game/prototype.js" type="module"></script>
     </body>
 </html>
