--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div align="left">
             <canvas width="400" height="400" id="gameCanvas"></canvas>
         </div>
+        <button onclick="initSession()">get your session token here</button>
         <button onclick="enterMatchmaking()">matchmaking button (totally works trust)</button>
         <script src="game/prototype.js" type="module"></script>
     </body>
