matching -> redirect done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </div>
         <button onclick="initSession()">get your session token here</button>
         <button onclick="enterMatchmaking()">matchmaking button (totally works trust)</button>
+        <button onclick="exitMatchmaking()">exit matchmaking NOW</button>
         <script src="game/prototype.js" type="module"></script>
     </body>
 </html>
