added loading screen, added temporary toggle to add loading animation to pages in menu, improved leaderboard UI

--- a/webpage/multiplayer.html
+++ b/webpage/multiplayer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="multiplayer.css">
 </head>
 <body>
-    <a href="titlescreen.html" class="back-button">← Back</a>
+    <a href="index.html" class="back-button">← Back</a>
     
     <div class="main-header">
         Multiplayer
