--- a/webpage/leaderboards.html
+++ b/webpage/leaderboards.html
@@ -1,12 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="quickplay.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rankings - Wordhunt.io</title>
     <style>
-      * {
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -19,60 +18,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             color: #F5ECD5;
-        }
-        .title{
-            font-size: 4rem;
-            font-weight: bold;
-            margin-bottom: 40px;
-            color: #F5ECD5;
-            text-shadow: 0 0 30px rgba(240, 187, 120, 0.3);
-        }
-        #container {
-            width: 600px;
-            height: auto;
-            margin: 20px auto;
-            font-family: Arial, sans-serif;
-        }
-
-        .row {
-            position: relative;
-            display: flex;
-            justify-content: space-between;
-            padding: 8px 12px;
-            height: 40px;
-            border-bottom: 1px solid #AFAFAF;
-            font-size: 18px;
-        }
-
-        .name {
-            width: 50%;
-        }
-
-        .score, .words {
-            width: 25%;
-            text-align: right;
-        }
-
-        .row:nth-child(1) {
-            background: gold;
-            font-weight: bold;
-        }
-
-        .row:nth-child(2) {
-            background: #c0c0c0;
-            font-weight: bold;
-        }
-
-        .row:nth-child(3) {
-            background: #cd7f32;
-            font-weight: bold;
-        }
-
-        h1 {
-            text-align: center;
-            margin-top: 20px;
+            padding: 40px 20px;
+            opacity: 0; /* Start hidden for fade-in */
+            filter: blur(10px);
         }
 
         .back-button {
@@ -80,9 +30,96 @@
             margin: 10px;
             text-decoration: none;
             font-size: 18px;
+            color: #F5ECD5;
         }
-         #player-form {
-            width: 600px;
+
+        .title {
+            font-size: 4rem;
+            font-weight: bold;
+            margin-bottom: 40px;
+            color: #F5ECD5;
+            text-shadow: 0 0 30px rgba(240, 187, 120, 0.3);
+            text-align: center;
+        }
+
+        #leaderboard-container {
+            background: rgba(245, 236, 213, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            padding: 30px;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+            border: 1px solid rgba(245, 236, 213, 0.2);
+            width: 700px;
+            max-width: 95%;
+            margin-top: 20px;
+        }
+
+        #header-row {
+            display: flex;
+            justify-content: space-between;
+            font-size: 1.2rem;
+            font-weight: bold;
+            padding: 12px 16px;
+            border-bottom: 2px solid rgba(245, 236, 213, 0.3);
+            margin-bottom: 10px;
+        }
+
+        .header-name { width: 50%; }
+        .header-score, .header-words { width: 25%; text-align: right; }
+
+        .row {
+            display: flex;
+            justify-content: space-between;
+            padding: 12px 16px;
+            font-size: 1.1rem;
+            border-radius: 10px;
+            margin-bottom: 8px;
+            transition: all 0.3s ease;
+            color: #F5ECD5;
+        }
+
+        .row:nth-child(even) {
+            background: rgba(245, 236, 213, 0.05);
+        }
+
+        .row:nth-child(odd) {
+            background: rgba(245, 236, 213, 0.1);
+        }
+
+        /* All rows have bold font */
+        .row {
+            font-weight: bold;
+        }
+
+        /* Top 3 rows with outlined styling */
+        .row.top-1 {
+            background: rgba(245, 236, 213, 0.05);
+            border: 3px solid #FFD700;
+            color: #F5ECD5;
+        }
+
+        .row.top-2 {
+            background: rgba(245, 236, 213, 0.05);
+            border: 3px solid #C0C0C0;
+            color: #F5ECD5;
+        }
+
+        .row.top-3 {
+            background: rgba(245, 236, 213, 0.05);
+            border: 3px solid #CD7F32;
+            color: #F5ECD5;
+        }
+
+        .row:hover {
+            transform: translateY(-3px);
+        }
+
+        .name { width: 50%; }
+        .score, .words { width: 25%; text-align: right; }
+
+        #player-form {
+            width: 700px;
+            max-width: 95%;
             margin: 20px auto;
             display: flex;
             gap: 10px;
@@ -92,18 +129,28 @@
             padding: 8px;
             font-size: 16px;
             flex: 1;
+            border-radius: 8px;
+            border: none;
         }
 
         #player-form button {
             padding: 8px 16px;
             font-size: 16px;
             cursor: pointer;
+            border-radius: 8px;
+            border: none;
+            background: rgba(245, 236, 213, 0.2);
+            color: #F5ECD5;
+        }
+
+        #player-form button:hover {
+            background: rgba(245, 236, 213, 0.3);
         }
     </style>
 </head>
 <body>
     <a href="index.html" class="back-button">← Back to Menu</a>
-    <h1>UCLA bozo leaderboard</h1>
+    <h1 class="title">Leaderboards</h1>
 
     <form id="player-form">
         <input type="text" id="name" placeholder="Player Name" required>
@@ -112,9 +159,25 @@
         <button type="submit">Add Player</button>
     </form>
 
-    <div id="container"></div>
+    <div id="leaderboard-container">
+        <div id="header-row">
+            <div class="header-name"></div>
+            <div class="header-score">Points</div>
+            <div class="header-words">Words</div>
+        </div>
+        <div id="container"></div>
+    </div>
 
-    <script>
+    <script type="module">
+        import { animate } from 'https://cdn.jsdelivr.net/npm/animejs/+esm';
+        // Fade in body content
+        animate('body', {
+            opacity: [0, 1],
+            filter: ['blur(10px)', 'blur(0px)'],
+            duration: 500,
+            easing: 'easeInOutQuad'
+        });
+
         // Static leaderboard
         const staticPlayers = [
             { name: "Cabooboo", points: 43000, words: 150 },
@@ -124,31 +187,33 @@
             { name: "pywh", points: 5000, words: 18 }
         ];
 
-        // Test functionality: adding players
         let dynamicPlayers = [];
 
         const container = document.querySelector('#container');
         const form = document.querySelector('#player-form');
 
-        // Loading leaderboard
         function renderLeaderboard() {
             container.innerHTML = '';
             const allPlayers = [...staticPlayers, ...dynamicPlayers];
             allPlayers.sort((a, b) => b.points - a.points);
 
-            allPlayers.forEach(player => {
+            allPlayers.forEach((player, index) => {
                 let row = document.createElement('div');
                 row.classList.add('row');
+
+                if (index === 0) row.classList.add('top-1');
+                if (index === 1) row.classList.add('top-2');
+                if (index === 2) row.classList.add('top-3');
+
                 row.innerHTML = `
                     <div class="name">${player.name}</div>
                     <div class="score">${player.points}</div>
-                    <div class="words">${player.words} words</div>
+                    <div class="words">${player.words}</div>
                 `;
                 container.appendChild(row);
             });
         }
 
-        // Adding new player via website
         form.addEventListener('submit', (e) => {
             e.preventDefault();
             const name = document.querySelector('#name').value.trim();
@@ -162,7 +227,6 @@
             }
         });
 
-        // Initial render
         renderLeaderboard();
     </script>
 </body>
