removed redundant files

--- a/webpage/leaderboards.html
+++ b/webpage/leaderboards.html
@@ -227,7 +227,7 @@
             }
         });
 
-        renderLeaderboard();
+        renderLeaderboard(); // test
     </script>
 </body>
 </html>
