--- a/webpage/index.html
+++ b/webpage/index.html
@@ -147,7 +147,7 @@ html {
 <div class="credits">Created by Adrnrwe</div>
 
 <script type="module">
-import { animate } from 'https://cdn.jsdelivr.net/npm/animejs/+esm';
+import { animate } from 'https://cdn.jsdelivr.net/npm/motion@latest/+esm';
 
 // Initial fade-in on page load
 window.addEventListener('load', () => {
