--- a/webpage/quickplay.html
+++ b/webpage/quickplay.html
@@ -8,7 +8,7 @@
  </head>
 <body>
 <h1>Quick Play</h1>
-    <a href="index.html" class="back-button">← Back to Menu</a>
+    <a href="/index.html" class="back-button">← Back to Menu</a>
     <div class="game-container">
         <canvas id="gameCanvas" width="800" height="800"></canvas>
         <div id="score">Points: 0 Words: 0</div>
