--- a/webpage/leaderboards.html
+++ b/webpage/leaderboards.html
@@ -149,7 +149,7 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-button">← Back to Menu</a>
+    <a href="/index.html" class="back-button">← Back to Menu</a>
     <h1 class="title">Leaderboards</h1>
 
     <form id="player-form">
