--- a/game.html
+++ b/game.html
@@ -11,7 +11,8 @@
     <div class="game-container">
         <canvas id="gameCanvas" width="400" height="400"></canvas>
         <div id="score">Points: 0 Words: 0</div>
-        <div id="timer">Timer: 80</div>
+        <div id="timer">Time Remaining: 80</div>
+        <div id="opponentScore">Points: 0 Words: 0</div>
     </div>
 
     <script type="module">
