--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>pywh</title>
-    <script src="webscripts/gameapi.js" defer></script>
+    <script type="module" src="webscripts/gameapi.js" defer></script>
+    <script></script>
 </head>
     <body>
         <h1>word hunt prototype??</h1>
