--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Match - Wordhunt.io</title>
-    <script src="webscripts/gameapi.js" defer></script>
+    <script type="module" src="webscripts/gameapi.js" defer></script>
 <body>
     <h1>Matchmaking!</h1>
     
@@ -16,17 +16,14 @@
     </div>
 
     <script type="module">
-    import { startGame } from "./game/prototype.js";
     async function init() {
         const urlParams = new URLSearchParams(window.location.search);
         const matchId = urlParams.get("match_id");
         const webSocket = await window.connectSocket(matchId);
-        const seed = await getSeed(matchId);
+        if (!webSocket) alert("could not connect to webSocket, token invalid");
         window.addEventListener("beforeunload", () => {
             pageClose(sessionStorage.getItem("frontendToken"), webSocket);
         });
-        if (seed) startGame(seed, webSocket);
-        else alert("failed to generate seed");
     };
     document.addEventListener("DOMContentLoaded", () => {
         init().catch(err => console.error("Init error:", err));
